--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.56.0",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.542.0",
     "next": "15.5.0",
     "react": "19.1.0",
+    "react-day-picker": "^9.9.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
