--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.542.0",
     "next": "15.5.0",
+    "next-auth": "^5.0.0-beta.29",
     "react": "19.1.0",
     "react-day-picker": "^9.9.0",
     "react-dom": "19.1.0"
